# bitroom

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/bitroom/: __main__.py  cli.py  room.py  tui.css  tui.py
src/bitroom/auth/: auth.py  encrypt_js.py
