[project]
name = "bitroom"
version = "0.1.0"
description = "BIT 场地预约查询接口。"
authors = [
    {name = "Y.D.X.", email = "73375426+YDX-2147483647@users.noreply.github.com"},
]
dependencies = [
    "requests>=2.29.0",
    "PyExecJS>=1.5.1",
    "rich>=13.3.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
bitroom = "bitroom.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
]
