[project]
name = "bitroom"
version = "0.1.0"
description = "BIT 场地预约查询接口。"
authors = [
    {name = "Y.D.X.", email = "73375426+YDX-2147483647@users.noreply.github.com"},
]
dependencies = [
    "PyExecJS>=1.5.1",
    "httpx>=0.24.0",
    "click>=8.1.3",
    "platformdirs>=3.5.0",
    'tomli>=2.0.1; python_version < "3.11"',
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
bitroom = "bitroom.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
]
